[workspace]
resolver = "2"
members = [
    "0000-introduction-smr",
    "0001-system-models",
    "0002-failure-models",
    "0003-two-generals",
    "0004-byzantine-generals",
    "crates/sim",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["Danny Willems <danny@badaas.be>"]
repository = "https://github.com/badaas/replication-algorithm-overview"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
proptest = "1.11.0"
rand = "0.9.4"
rand_chacha = "0.9.0"
sha2 = "0.10.9"
sim = { path = "crates/sim" }
thiserror = "2.0.18"

[profile.release]
lto = "thin"
codegen-units = 1
