[workspace]
resolver = "2"
members = [
    "0000-introduction-smr",
    "0001-system-models",
    "0002-failure-models",
    "0003-two-generals",
    "0004-byzantine-generals",
    "0005-flp-impossibility",
    "0006-dolev-strong",
    "0007-dolev-reischuk",
    "0008-cap-pacelc",
    "0009-broadcasts",
    "0010-quorum-systems",
    "0011-crypto-prereqs",
    "0012-failure-detectors",
    "0013-ben-or",
    "0014-rabin",
    "0015-bracha-aba",
    "0016-cks-ckps",
    "0017-mmr",
    "0018-common-coins",
    "0019-2pc-3pc",
    "0020-viewstamped-replication",
    "0021-vr-revisited",
    "0022-paxos-synod",
    "0023-multi-paxos",
    "0024-cheap-paxos",
    "0025-fast-paxos",
    "0026-generalized-paxos",
    "0027-epaxos",
    "0028-mencius",
    "0029-stoppable-vertical-paxos",
    "0030-disk-paxos",
    "0031-flexible-paxos",
    "0032-compartmentalized-paxos",
    "0033-raft",
    "0034-zab",
    "0035-chain-replication",
    "0036-craq",
    "0037-spanner-truetime",
    "0038-caspaxos",
    "0039-atlas",
    "0040-rampart",
    "0041-securering",
    "0042-pbft",
    "0043-qu",
    "0044-hq",
    "crates/sim",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["Danny Willems <danny@badaas.be>"]
repository = "https://github.com/badaas/replication-algorithm-overview"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
proptest = "1.11.0"
rand = "0.9.4"
rand_chacha = "0.9.0"
sha2 = "0.10.9"
sim = { path = "crates/sim" }
thiserror = "2.0.18"

[profile.release]
lto = "thin"
codegen-units = 1
