[package]
name = "replication-0000-introduction-smr"
version = "0.1.0"
description = "Module 0000: Introduction to state-machine replication"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
