[package]
name = "replication-0002-failure-models"
version = "0.1.0"
description = "Module 0002: Failure models -- crash, omission, Byzantine, mobile, rational"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rand = { workspace = true }
sim = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
