[package]
name = "replication-0003-two-generals"
version = "0.1.0"
description = "Module 0003: The Two Generals problem"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
