[package]
name = "replication-0005-flp-impossibility"
version = "0.1.0"
description = "Module 0005: FLP impossibility (Fischer-Lynch-Paterson 1985)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
