[package]
name = "replication-0009-broadcasts"
version = "0.1.0"
description = "Module 0009: Reliable, causal, and atomic broadcast"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
