[package]
name = "replication-0010-quorum-systems"
version = "0.1.0"
description = "Module 0010: Quorum systems and intersection"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
