[package]
name = "replication-0011-crypto-prereqs"
version = "0.1.0"
description = "Module 0011: Cryptographic prerequisites for consensus"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }
sim = { workspace = true }
