[package]
name = "replication-0012-failure-detectors"
version = "0.1.0"
description = "Module 0012: Chandra-Toueg failure detectors"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
