[package]
name = "replication-0014-rabin"
version = "0.1.0"
description = "Module 0014: Rabin 1983 randomised Byzantine agreement"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
