[package]
name = "replication-0015-bracha-aba"
version = "0.1.0"
description = "Module 0015: Bracha 1984/1987 async Byzantine agreement"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
