[package]
name = "replication-0017-mmr"
version = "0.1.0"
description = "Module 0017: Mostefaoui-Moumen-Raynal signature-free async ABA"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
