[package]
name = "replication-0020-viewstamped-replication"
version = "0.1.0"
description = "Module 0020: Viewstamped Replication (Oki-Liskov 1988, Liskov-Cowling 2012)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
