[package]
name = "replication-0022-paxos-synod"
version = "0.1.0"
description = "Module 0022: Paxos Synod (Lamport 1998)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
