[package]
name = "replication-0024-cheap-paxos"
version = "0.1.0"
description = "Module 0024: Cheap Paxos (Lamport-Massa 2004)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
