[package]
name = "replication-0025-fast-paxos"
version = "0.1.0"
description = "Module 0025: Fast Paxos (Lamport 2006)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
