[package]
name = "replication-0026-generalized-paxos"
version = "0.1.0"
description = "Module 0026: Generalized Paxos (Lamport 2005)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
