[package]
name = "replication-0028-mencius"
version = "0.1.0"
description = "Module 0028: Mencius (rotating-leader Multi-Paxos)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sim = { workspace = true }
